# PydanticAI-Twitter-bot

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  system_prompt.md  todo.md
alembic/versions/: 32cd391f7960_initial_models_migration.py
pydanticai_twitter_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  database.py  di.py
src/agents/: __init__.py  opinion_agent.py  posting_agent.py  research_agent.py  tweet_agent.py
src/models/: __init__.py  hn.py  rss.py  trend.py  tweet.py  user_content.py
src/services/: scheduler.py  scraper.py
src/sources/: base.py  hn_fetcher.py  rss_fetcher.py  twitter_fetcher.py
tests/: conftest.py  test_agents.py  test_config.py  test_database.py  test_di.py  test_integration.py  test_models.py  test_services.py  test_sources.py
